--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Тестовый репозиторий</title>
 </head>
 <body>
-<h1>Тестовый репозиторий</h1>
+<h1>Тестовый репозиторий GitHub!</h1>
 </body>
 </html>
